# binaryen-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: ci.yml  publish.yml
binaryen-sys/: Cargo.toml  Shim.cpp  build-binaryen-bc.sh  build.rs  wrapper.h
binaryen-sys/src/: bindings.rs  lib.rs  passes.rs
binaryen-sys/tests/: bindgen-up-to-date.rs
docs/: RELEASING.md
examples/: hello_world.rs  wasm_opt.rs
src/: lib.rs  name.rs  relooper.rs  to_cstr.rs  tools.rs
