[package]

name = "binaryen-sys"
version = "0.2.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pepyakin/binaryen-rs"
homepage = "https://github.com/pepyakin/binaryen-rs"
description = "Bindings to the binaryen library"
categories = ["external-ffi-bindings"]
exclude = [
    "binaryen/test/*"
]

[build-dependencies]
bindgen = "0.30.0"
cmake = "0.1.25"
cc = "1.0.4"
