[package]
name = "binaryen-sys"
version = "0.10.0"
authors = ["Sergey Pepyakin <s.pepyakin@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/pepyakin/binaryen-rs"
homepage = "https://github.com/pepyakin/binaryen-rs"
description = "Bindings to the binaryen library"
categories = ["external-ffi-bindings"]
exclude = [
    "binaryen/test/*"
]

[build-dependencies]
cmake = "0.1.25"
cc = "1.0.4"
regex = "1"
heck = "0.3"

[dev-dependencies]
bindgen = "0.52.0"
diff = "0.1"
